Code cleanup
Code cleanup